feat: add novas impls