@@ -1,18 +1,27 @@
 package com.devsuperior.dslist.adapter.out.dto.internal;
 
 import com.devsuperior.dslist.adapter.out.dto.external.CustomerLoanOutputDTO;
+import org.springframework.util.CollectionUtils;
 
+import java.util.Collections;
 import java.util.List;
 
-public record CustomerLoanOutput(String customer,
-                                 List<LoanOutput> loans) {
+public record CustomerLoanOutput(
+        String customerIdentifier,
+        String customer,
+        List<LoanOutput> loans) {
 
     public static CustomerLoanOutput fromDTO(CustomerLoanOutputDTO dto) {
-        List<LoanOutput> loans = dto.loans() != null ?
-                dto.loans().stream()
-                        .map(loan -> new LoanOutput(loan.type(), loan.interestRate()))
-                        .toList() : List.of();
+        List<LoanOutput> loans = CollectionUtils.isEmpty(dto.loans())
+                ? Collections.emptyList()
+                : dto.loans().stream()
+                .map(loan -> new LoanOutput(loan.type(), loan.interestRate()))
+                .toList();
 
-        return new CustomerLoanOutput(dto.customer(), loans);
+        return new CustomerLoanOutput(
+                dto.customerIdentifier(),
+                dto.customer(),
+                loans
+        );
     }
 }
